# telegram-bot-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
bot/: __main__.py  init.py  runners.py
bot/core/: config.py
bot/handlers/: __init__.py
bot/handlers/users/: start.py
bot/utils/: logging.py
