[project]
name = "telegram-bot-template"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "pydantic-settings>=2.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120
fix = true
target-version = "py312"
# exclude = [ "" ]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "T10",
    "T20",
    "Q",
    "RET",
    "B",
    "PLC",
    "I", # imports
    "C",
    "PLW",
    "UP",
#    "FIX" # resolving tоdo
    "ISC", # implicit-str-concat
#    "DTZ",
    "PLR1714", # in (0, 1)
    "ASYNC",
#    "ANN" # аннотации
    "G004",
    "TC003",
    "ANN201",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [".venv", "tests"]
